Fix some layout bugs

--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -31,6 +31,7 @@
 
   &__container {
     height: auto;
+    margin-top: 50px;
 
     @media (orientation: landscape) {
       position: relative;
@@ -51,7 +52,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      // margin-top: 5px;
+      margin-top: 5px;
       height: auto;
 
       @media (orientation: landscape) {
@@ -61,6 +62,7 @@
         width: 70%;
         height: 70%;
         transform: translate(-50%, -50%);
+        
       }
 
       @media all and (min-width: 1024px) {
@@ -70,6 +72,7 @@
         width: 70%;
         height: 70%;
         transform: translate(-50%, -50%);
+        margin-top: 0;
       }
 
       &-one {
@@ -80,8 +83,8 @@
         margin-bottom: 50px;
         width: 270px;
         height: 200px;
-        //border-radius: 3%;
-        //background-color: #9A79B2;
+        border-radius: 3%;
+        background-color: #9A79B2;
 
         // @media (orientation: landscape) {
         //   position: absolute;
